# KielMAT

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  GSD.mat  LICENSE  README.md  environment.yml  import_data.py  import_data_examples.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test.py
.github/workflows/: mkdocs.yml  pylint.yml  test-and-lint.yml
background/: index.html
contributing/: index.html
dataclass/: index.html
datasets/: index.html
datasets/keepcontrol/: index.html
datasets/mobilised/: index.html
docs/: 01_tutorial_gait_sequence_detection.md  02_tutorial_initial_contact_detection.md  03_tutorial_physical_activity_monitoring.md  04_tutorial_events_in_dataclass.md  05_tutorial_sit_to_stand_stand_to_sit_detection.md  GSD.md  PAM.md  PHAM.md  background.md  contributing.md  dataclass.md  dataclasses.md  datasets.md  event_visualization.md  examples.md  faq.md  index.md  modules.md  style.css  utils.md
docs/datasets/: fairpark.md  index.md  keepcontrol.md  mobilised.md
docs/examples/: 00_tutorial_basics.md  01_tutorial_gait_sequence_detection.md  02_tutorial_initial_contact_detection.md  03_tutorial_physical_activity_monitoring.md  04_tutorial_events_in_dataclass.md  05_tutorial_sit_to_stand_stand_to_sit_detection.md  06_tutorial_lowlevel_import.md  06_tutorial_turn_detection.md  07_tutorial_turn_detection.md  basic_00_intro_kielmat.md  basic_00_intro_ngmt.md  basic_00_load_Data_into_KielMAT.md  basic_01_load_Data.md  basic_01_load_Data_into_KielMAT.md  basic_02_events.md  basic_02_load_dataset.md  basic_03_events.md  event_visualization.ipynb  event_visualization.md  index.md  modules_01_gsd.md  modules_02_icd.md  modules_03_pam.md  modules_04_gsd.md  modules_04_ptd.md  modules_05_icd.md  modules_05_td.md  modules_06_pam.md  modules_06_rlc_mccamley.md  modules_07_ptd.md  modules_08_td.md  modules_09_rlc_mccamley.md  modules_09_sa.md
docs/modules/: gsd.md  ic_rlc_mccamley.md  icd.md  index.md  pam.md  ptd.md  rlc.md  sa.md  td.md
docs/utils/: importers.md  index.md  orientation_estimation.md  preprocessing.md
examples/: 00_tutorial_basics_pyarrow.ipynb  01_tutorial_gait_sequence_detection.ipynb  02_tutorial_initial_contact_detection.ipynb  03_tutorial_physical_activity_monitoring.ipynb  03a_tutorial_physical_activity_monitoring_with_load.ipynb  04_tutorial_events_in_dataclass.ipynb  05_tutorial_sit_to_stand_stand_to_sit_detection.ipynb  06_tutorial_lowlevel_import.ipynb  06_tutorial_turn_detection.ipynb  07_tutorial_turn_detection.ipynb  GSDB_example.ipynb  ICD_example.ipynb  PAM_example.ipynb  PAM_example.md  PHAM_example.ipynb  PHAM_example.md  basic_00_intro_kielmat.ipynb  basic_00_intro_ngmt.ipynb  basic_01_load_Data.ipynb  basic_02_events.ipynb  basic_03_foot_imus.ipynb  event_visualization.ipynb  event_visualization.md  events_in_dataclass.ipynb  index.html  modules_01_gsd.ipynb  modules_02_icd.ipynb  modules_02_icd_keepControl.ipynb  modules_03_pam.ipynb  modules_04_ptd.ipynb  modules_04_ssd.ipynb  modules_05_td.ipynb  modules_06_rlc_mccamley.ipynb  modules_06_sa.ipynb  modules_09_sa.ipynb  paraschiv_gait_sequence_detection.ipynb  paraschiv_initial_contact_detection.ipynb  physical_activity_monitoring.ipynb  tutorial_basics.ipynb
examples/basic_00_load_Data_into_KielMAT/: index.html
examples/basic_01_load_Data_into_KielMAT/: index.html
examples/basic_01_load_dataset/: index.html
examples/basic_02_events/: index.html
examples/basic_02_load_dataset/: index.html
examples/basic_03_events/: index.html
examples/data/: ReadMe.md  channels_info_sleep_analysis.parquet  exDataHasomed.csv  exDataMobilise.mat  exDataPolarm200.csv  gait_sequence_events.tsv
examples/modules_01_gsd/: index.html
examples/modules_02_icd/: index.html
examples/modules_03_pam/: index.html
examples/modules_04_gsd/: index.html
examples/modules_04_ptd/: index.html
examples/modules_05_icd/: index.html
examples/modules_05_td/: index.html
examples/modules_06_pam/: index.html
examples/modules_07_ptd/: index.html
examples/modules_08_td/: index.html
faq/: index.html
info/: Transition Algorithms to Python.pptx  motion_metric.pptx
kielmat/: __init__.py  base.py
kmat/: __init__.py
modules/: index.html
ngmt/: __init__.py  config.py  file_io.py  importers.py  motiondata.py
paper/: keepcontrol_tug.ipynb  make_figures.py  paper.bib  paper.html  paper.ipynb  paper.md  references.bib
search/: search_index.json
site/: 404.html  index.html  objects.inv
utils/: index.html
(+102 files in other folders)
