[tool.poetry]
name = "ngmt"
version = "0.0.2"
description = "The NeuroGeriatricMotionToolbox (NGMT) is a Python-based toolbox for processing motion data."
license = "MIT"
readme = "README.md"
homepage = "https://neurogeriatricskiel.github.io/NGMT/"
repository = "https://github.com/neurogeriatricskiel/NGMT"
documentation = "https://neurogeriatricskiel.github.io/NGMT"
authors = [
    "Masoud Abedinifar <Masoud.Abedinifar@uksh.de>",
    "Julius Welzel <j.welzel@neurologie.uni-kiel.de>",
    "Walter Maetzler <w.maetzler@neurologie.uni-kiel.de>",
    "Clint Hansen <c.hansen@neurologie.uni-kiel.de>",
    "Robbin Romijnders <r.romijnders@neurologie.uni-kiel.de>"
]
maintainers = [
    "Masoud Abedinifar <Masoud.Abedinifar@uksh.de>",
    "Julius Welzel <j.welzel@neurologie.uni-kiel.de>",
    "Robbin Romijnders <r.romijnders@neurologie.uni-kiel.de>"
]
packages = [
    { include = "ngmt" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
pandas = ">=2"
scipy = ">=1.11.0"
numpy = ">=1.25"
pytest = "^7.4.3"
pywavelets = "^1.4.1"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
tpcp = "^0.27.0"
qmt = "^0.2.4"
vqf = "^2.0.0"
h5py = "^3.10.0"
polars = "^0.20.5"
seaborn = "^0.13.1"
json-repair = "^0.8.0"
pyarrow = "^15.0.0"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "pymdownx.superfences"]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
