[tool.poetry]
name = "kielmat"
version = "0.0.5"
description = "The KielMotionAnalysisToolbox (KielMAT) is a Python-based toolbox for processing motion data."
license = "MIT"
readme = "README.md"
homepage = "https://neurogeriatricskiel.github.io/KielMAT/"
repository = "https://github.com/neurogeriatricskiel/KielMAT"
documentation = "https://neurogeriatricskiel.github.io/KielMAT"
authors = [
    "Masoud Abedinifar <Masoud.Abedinifar@uksh.de>",
    "Julius Welzel <j.welzel@neurologie.uni-kiel.de>",
    "Walter Maetzler <w.maetzler@neurologie.uni-kiel.de>",
    "Clint Hansen <c.hansen@neurologie.uni-kiel.de>",
    "Robbin Romijnders <r.romijnders@neurologie.uni-kiel.de>"
]
maintainers = [
    "Masoud Abedinifar <Masoud.Abedinifar@uksh.de>",
    "Julius Welzel <j.welzel@neurologie.uni-kiel.de>",
    "Robbin Romijnders <r.romijnders@neurologie.uni-kiel.de>"
]
packages = [
    { include = "kielmat" },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
pandas = ">=2"
scipy = ">=1.11.0"
numpy = ">=1.25"
pytest = "^7.4.3"
pywavelets = "^1.4.1"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
tpcp = "^0.27.0"
qmt = "^0.2.4"
vqf = "^2.0.0"
h5py = "^3.10.0"
polars = "^0.20.5"
seaborn = "^0.13.1"
json-repair = "^0.8.0"
pyarrow = "^15.0.0"
bids-validator = "^1.14.4"
actipy = "^3.0.5"
pooch = "^1.8.2"
openneuro-py = "^2024.2.0"
pre-commit = "^4.0.1"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "pymdownx.superfences"]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
